<resources>
    <string name="app_name">RxProjectLesson</string>

    <!--Facebook strings-->
    <string name="facebook_app_id">439938283523514</string>
    <string name="fb_login_protocol_scheme">fb439938283523514</string>

    <!--Errors-->
    <string name="no_implemented">This feature not implemented yet.</string>
    <string name="default_error">Ops, something went wrong.</string>

    <!--Car detail-->
    <string name="violation_button">ZGŁOŚ NARUSZENIE</string>
    <string name="show_number">Pokaż numer</string>
    <string name="brand_car">Marka Pojazdu</string>
    <string name="model_car">Model Pojazdu</string>
    <string name="type">Typ</string>
    <string name="used">Używany</string>
    <string name="cm_3">Pojemność skokowa</string>
    <string name="localization">Localizacja</string>
    <string name="description">OPIS</string>
    <string name="fuel_type">Rodzaj paliwa</string>
    <string name="pln">PLN</string>
    <string name="brand">Marka Pojazdu</string>
    <string name="category">Kategoria</string>
    <string name="own">Osobowe</string>
    <string name="stan">Stan</string>
    <string name="localizationb">Localizacja</string>
    <string name="save_filter">Zapisz filtry wyszukiwania</string>
    <string name="filters">Filtry</string>

    <!--Call dialog-->
    <string name="title_call">Chcesz zadzwonić?</string>
    <string name="tel">tel:</string>
    <string name="call_button">Call</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_car">CarActivity</string>


    <string name="title_home">Ogłoszenia</string>
    <string name="title_dashboard">Ulubione</string>
    <string name="title_notifications">Konto</string>

    <!--Favorite-->clean_button
    <string name="clean_button">Usuń wszystkie obserwowane</string>
    <string name="add_this_card">Add this Card to BOJ Pay\nScroll up to choose another Card.</string>
    <string name="go4it_cards">Go4it cards cannot be used at RTA\nterminals tirh BOJ PAY</string>
    <string name="add_to_boj_wallet">Add to BOJ Wallet</string>
    <string name="sing_in">Login</string>
    <string name="sing_up">Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="featured">Wyróżnione</string>
    <string name="facebook">FaceBook</string>
    <string name="sing_up_button">Register</string>
    <string name="sing_in_button">Login</string>

</resources>
