<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sing_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sing_in"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/sing_in_title"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/shadow"
        android:background="@drawable/custom_edit_text_top"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/centerGuideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:background="@drawable/custom_edit_text_bottom"
        app:layout_constraintTop_toBottomOf="@+id/centerGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/sing_in_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/reset_password"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_arrow_right"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/username"
        app:layout_constraintVertical_bias="0.56" />


    <FrameLayout
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/sing_in_fb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook_button_custom_background"
            android:text="@string/facebook"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_register_button"
        android:text="@string/sing_up_button"
        android:shadowColor="@color/colorBlack"
        android:textColor="#FF8C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />
</android.support.constraint.ConstraintLayout>