<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/light_transparent"/>

        <RelativeLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/light_transparent"
                />

            <TextView
                android:id="@+id/brutto_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/price"
                android:background="@color/light_transparent"
                />
        </RelativeLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CCE6E6E6"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/brand_car"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/model_car"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fuel_type"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cm_3"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/localization"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/light_transparent" />
        </LinearLayout>

        <View
            style="@style/Line"
            />

        <TextView
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/textColorBlue"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_transparent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="right"
            android:background="@color/backgroundPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flag_red_24dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"/>

            <TextView
                android:background="@android:color/transparent"
                android:id="@+id/violation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violation_button"
                android:textColor="@color/colorRed"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_transparent"/>

        <Button
            android:id="@+id/show_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_number"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorBlue"
            android:textColor="@color/textColorWhite"/>

    </LinearLayout>
</ScrollView>