<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_list_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recycler_view"
        android:layout_alignTop="@+id/boj_pay_label"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-8dp"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

    <TextView
        android:id="@+id/boj_pay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/boj_pay_backgrount"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:text="BOJ PAY"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_power_settings_new_black_24dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/boj_pay_label"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="20dp" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_to_wallet_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_container_add_to_wallet"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="418dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="52dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/wallet_apple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_boj_wallet"
            android:textColor="@color/textColorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/add_this_card_title"
        android:layout_below="@+id/add_to_wallet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/add_this_card"
        android:textColor="@color/textColorWhite"/>

    <TextView
        android:id="@+id/go4it_cards_title"
        android:layout_below="@+id/add_this_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/go4it_cards"
        android:textColor="@color/textColorWhite"/>

</RelativeLayout>