<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_button"
        android:shadowColor="@color/colorBlack"
        android:text="@string/sing_in_button"
        android:textColor="#FF8C00"
        app:layout_constraintBottom_toTopOf="@+id/sing_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/sing_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sing_up"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/sing_up_title"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/shadow"
        android:background="@drawable/custom_edit_text_top"
        android:hint="Name:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/sing_up_title"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/shadow"
        android:background="@drawable/custom_edit_text_center"
        android:hint="Surname:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="E-mail:"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edit_text_center"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/centerGuideline" />

    <android.support.constraint.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="000-00-00"
        android:background="@drawable/custom_edit_text_center"
        android:inputType="phone"
        android:maxLength="12"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerGuideline" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit_text_center"
        android:hint="@string/password"
        android:layout_marginEnd="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit_text_bottom"
        android:hint="Confirm password:"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/registration_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/reset_password"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="OR"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <FrameLayout
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/sing_in_fb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/facebook_button_custom_background"
            android:text="@string/facebook"
            android:textColor="#ffffff"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="589dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>


</android.support.constraint.ConstraintLayout>